N2 polar fixed errorbars Ar minor fixes in ables

--- a/N2_calibration.ipynb
+++ b/N2_calibration.ipynb
@@ -101,9 +101,7 @@
     "ax.plot(en,KER, color=cmap_viridis(0), linewidth=3, alpha = 0.6)\n",
     "ax.plot(en_masked,gaus_fit(en_masked,*popt), color=cmap_viridis(0.3), ls=\"--\",linewidth=2, label=\"Gaussian fit\")\n",
     "plt.plot([], [], ' ', label=fit_info)\n",
-    "\n",
     "ax.legend(loc=\"best\",fontsize=\"medium\")\n",
-    "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
     "ax.set_xlabel('energy [eV]')\n",
@@ -111,7 +109,8 @@
     "ax.set_ylabel('counts')\n",
     "ax.ticklabel_format(axis=\"y\",style=\"sci\",scilimits=(0,1))\n",
     "ax.set_ylim([0, 55000])\n",
-    "ax.grid()\n",
+    "\n",
+    "ax.grid(linestyle = '-', linewidth = 2 , alpha = 0.4)\n",
     "\n",
     "fig.savefig(dir+\"KER_gaus.png\", dpi=300, transparent=False,bbox_inches='tight')\n",
     "fig.savefig(dir+\"KER_gaus.svg\", dpi=300, transparent=False,bbox_inches='tight')"
@@ -130,12 +129,12 @@
     "\n",
     "fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
     "# plt.scatter(phi_mol1D/180.*np.pi, MFPAD, color=cmap_viridis(0), s=80)\n",
-    "plt.errorbar(phi_mol1D/180.*np.pi, MFPAD, yerr=MFPADerr, fmt=\"o\", color=cmap_viridis(0), lw= 20, mec='green', ms=7)\n",
     "plt.plot(xnew/180.*np.pi, ynew, c=\"r\", alpha=0.5)\n",
+    "plt.errorbar(phi_mol1D/180.*np.pi, MFPAD, yerr=MFPADerr*10, fmt=\"o\", color=cmap_viridis(0), mec='green', ms=6)\n",
     "ax.set_rticks([2000,4000,6000, 8000])  # Less radial ticks\n",
     "ax.set_yticklabels([])\n",
     "# ax.set_rti  # Move radial labels away from plotted line\n",
-    "ax.grid(True)\n",
+    "ax.grid(linestyle = '-', linewidth = 2 , alpha = 0.6)\n",
     "\n",
     "fig.savefig(dir+\"MFPAD_err.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "fig.savefig(dir+\"MFPAD_err.svg\", dpi=300, transparent=False, bbox_inches='tight')"
@@ -414,7 +413,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "hash": "dc800e5d61c9e3c049001c7d7cf96b16f7c8a1a7caee44baf3fc436d9ec555c3"
   },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit ('base': conda)",
