--- a/Ar_calibration.ipynb
+++ b/Ar_calibration.ipynb
@@ -134,7 +134,7 @@
     "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
     "fig.savefig(dir+\"fish_fillet_y.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
-    "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False)"
+    "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -164,7 +164,7 @@
     "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
     "fig.savefig(dir+\"fish_fillet_x.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
-    "# fig.savefig(dir+\"fish_fillet_x.svg\", dpi=300, transparent=False)"
+    "# fig.savefig(dir+\"fish_fillet_x.svg\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -208,7 +208,6 @@
     "cs=ax.pcolormesh(ctheta_en,en,cthetaEE_masked.T, shading='gouraud')\n",
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
-    "\n",
     "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "ax.set_ylabel('kinetc energy photoelectrons [eV]')\n",
     "ax.set_ylim([0., 15.])\n",
@@ -219,7 +218,7 @@
     "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
     "fig.savefig(dir+\"ctheta_EE.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
-    "# fig.savefig(dir+\"ctheta_EE.svg\", dpi=300, transparent=False)"
+    "# fig.savefig(dir+\"ctheta_EE.svg\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -257,7 +256,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "hash": "dc800e5d61c9e3c049001c7d7cf96b16f7c8a1a7caee44baf3fc436d9ec555c3"
   },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit ('base': conda)",
