right rotation around y-axis new graphs rotation spehrical coords contrast instead of min max

--- a/standard_graphs.ipynb
+++ b/standard_graphs.ipynb
@@ -279,7 +279,8 @@
     "\n",
     "edge_list=[(0,6),(1,6),(2,6),(3,4),(3,5),(4,3),(4,5),(4,6),(4,7),(5,3),(5,4),(5,8),(5,9),(6,0),(6,1),(6,2),(6,4),(7,4),(8,5),(9,5)]\n",
     "\n",
-    "a=-125.; b=0.; g=0.\n",
+    "# a=-125.; b=0.; g=0. #better for the CF3 location\n",
+    "a=-90.-4.6; b=0.; g=0.\n",
     "\n",
     "# df_R_PDB['x'] = 0.664 + df_R_PDB['x'] #shifting the origin of the molecule\n",
     "# df_R_PDB['y'] = 1. + df_R_PDB['y'] #shifting the origin of the molecule\n",
@@ -420,11 +421,11 @@
     "xy_rot_S = listOfTuples(df_S_PDB[\"phi_rot\"], df_S_PDB[\"ctheta_rot\"])\n",
     "aspect=(df_R_PDB[\"phi\"].max()/df_R_PDB[\"ctheta\"].max())\n",
     "\n",
-    "ax[0].plot(df_R_PDB[\"phi\"], df_R_PDB[\"ctheta\"], \"o\")\n",
+    "ax[0].plot(df_R_PDB[\"phi\"], df_R_PDB[\"ctheta\"], \"o\", c=\"b\", ms=18)\n",
     "for index, row in df_R_PDB.iterrows():\n",
     "    ax[0].annotate(row['atom'], xy=xy_R[index], textcoords='data')\n",
     "\n",
-    "ax[0].set_title(\"R enant atom position\")\n",
+    "ax[0].set_title(\"R enantiomer original\")\n",
     "ax[0].set_xlabel('\\u03C6 [DEG]')\n",
     "ax[0].set_xlim([-175,175])\n",
     "ax[0].set_ylabel('cos\\u03D1 [adm]')\n",
@@ -433,11 +434,11 @@
     "ax[0].set_aspect(aspect, adjustable='box')\n",
     "ax[0].grid(linestyle = '-', linewidth = 2 , alpha = 0.6)\n",
     "\n",
-    "ax[1].plot(df_R_PDB[\"phi_rot\"], df_R_PDB[\"ctheta_rot\"], \"o\")\n",
+    "ax[1].plot(df_R_PDB[\"phi_rot\"], df_R_PDB[\"ctheta_rot\"], \"o\", c=\"b\", ms=18)\n",
     "for index, row in df_R_PDB.iterrows():\n",
     "    ax[1].annotate(row['atom'], xy=xy_rot_R[index], textcoords='data')\n",
     "\n",
-    "ax[1].set_title(\"R enant atom position ROT\")\n",
+    "ax[1].set_title(\"R enantiomer ROT\")\n",
     "ax[1].set_xlabel('\\u03C6 [DEG]')\n",
     "ax[1].set_xlim([-175,175])\n",
     "ax[1].set_ylabel('cos\\u03D1 [adm]')\n",
@@ -446,11 +447,11 @@
     "ax[1].set_aspect(aspect, adjustable='box')\n",
     "ax[1].grid(linestyle = '-', linewidth = 2 , alpha = 0.6)\n",
     "\n",
-    "ax[2].plot(df_S_PDB[\"phi_rot\"], df_S_PDB[\"ctheta_rot\"], \"o\")\n",
+    "ax[2].plot(df_S_PDB[\"phi_rot\"], df_S_PDB[\"ctheta_rot\"], \"o\", c=\"r\", ms=18)\n",
     "for index, row in df_S_PDB.iterrows():\n",
     "    ax[2].annotate(row['atom'], xy=xy_rot_S[index], textcoords='data')\n",
     "\n",
-    "ax[2].set_title(\"S enant atom position ROT\")\n",
+    "ax[2].set_title(\"S enantiomer ROT\")\n",
     "ax[2].set_xlabel('\\u03C6 [DEG]')\n",
     "ax[2].set_xlim([-175,175])\n",
     "ax[2].set_ylabel('cos\\u03D1 [adm]')\n",
@@ -461,6 +462,44 @@
     "\n",
     "fig.savefig(dir+\"atom_position_sphericalcoords.png\", dpi=300, transparent=True, bbox_inches='tight')\n",
     "fig.savefig(dir+\"atom_position_sphericalcoords.svg\", dpi=300, transparent=True, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rotated\n",
+    "fig,ax=plt.subplots(1,2, figsize=(25,10))\n",
+    "\n",
+    "ax[0].plot(df_R_PDB[\"phi_rot\"], df_R_PDB[\"ctheta_rot\"], \"o\", c=\"b\", ms=18)\n",
+    "for index, row in df_R_PDB.iterrows():\n",
+    "    ax[0].annotate(row['atom'], xy=xy_rot_R[index], textcoords='data')\n",
+    "\n",
+    "ax[0].set_title(\"R enantiomer \\u03B1=-4.6°\")\n",
+    "ax[0].set_xlabel('\\u03C6 [DEG]')\n",
+    "ax[0].set_xlim([-180,180])\n",
+    "ax[0].set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax[0].set_ylim([-1,1])\n",
+    "# ax[0].set_aspect(aspect)\n",
+    "ax[0].set_aspect(aspect, adjustable='box')\n",
+    "ax[0].grid(linestyle = '-', linewidth = 2 , alpha = 0.6)\n",
+    "\n",
+    "ax[1].plot(df_S_PDB[\"phi_rot\"], df_S_PDB[\"ctheta_rot\"], \"o\", c=\"r\", ms=18)\n",
+    "for index, row in df_S_PDB.iterrows():\n",
+    "    ax[1].annotate(row['atom'], xy=xy_rot_S[index], textcoords='data')\n",
+    "\n",
+    "ax[1].set_title(\"S enantiomer \\u03B1=-4.6°\")\n",
+    "ax[1].set_xlabel('\\u03C6 [DEG]')\n",
+    "ax[1].set_xlim([-180,180])\n",
+    "ax[1].set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax[1].set_ylim([-1,1])\n",
+    "# ax[1].set_aspect(aspect)\n",
+    "ax[1].set_aspect(aspect, adjustable='box')\n",
+    "ax[1].grid(linestyle = '-', linewidth = 2 , alpha = 0.6)\n",
+    "\n",
+    "fig.savefig(dir+\"atom_position_sphericalcoords_th.svg\", dpi=300, transparent=True, bbox_inches='tight')"
    ]
   },
   {
@@ -558,14 +597,15 @@
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "# cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=15)\n",
     "cs,ax=fugi.plot_interpolation(phi_MOx,cthea_MOx,totMOx_MFPAD_tot.T, ax=ax, xstep=1, ystep=0.01, n=20, gaussian=7.)\n",
-    "ax.set_title(\"S-MOx MFPAD at 11.5 eV\")\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
+    "ax.set_title(\"S-MOx MFPAD @ 11.5 eV\")\n",
     "\n",
     "aspect=(phi_MOx.max()/cthea_MOx.max())\n",
     "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -578,9 +618,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cs.get_array().max()/cs.get_array().min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "# cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=15)\n",
     "cs,ax=fugi.plot_interpolation(phi_MOx,cthea_MOx,RMOx_MFPAD_flip_tot.T, ax=ax, xstep=1, ystep=0.01, n=20, gaussian=7.)\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
     "ax.set_title(\"R-MOx MFPAD at 11.5 eV\")\n",
     "\n",
     "aspect=(phi_MOx.max()/cthea_MOx.max())\n",
@@ -588,7 +638,7 @@
     "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
