--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -42,13 +42,15 @@
     "#loads the temperaure cmap like Philipp for both matpplotlib and plotly\n",
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
+    "#TFMOx\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=3.0eV';en=\"KE=3eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=4.0eV';en=\"KE=4eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=6.1eV';en=\"KE=6.1eV\";\n",
-    "path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV';en=\"KE=8.2eV\";\n",
+    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV';en=\"KE=8.2eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV';en=\"KE=11.5eV\";\n",
     "\n",
-    "# path = r'../PYTHON_graphs/DATA/Theory/MOx-R/MoX_CPR_positive';en=\"MOx_CPR\";\n",
+    "#MOx\n",
+    "path = r'../PYTHON_graphs/DATA/Theory/MOx-R/MoX_CPR_positive';en=\"MOx_CPR\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/MOx-R/MoX_CPL_negative';en=\"MOX_CPL\";\n",
     "\n",
     "# glob has to be sorted (both in unix and windows)\n",
@@ -1068,6 +1070,7 @@
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
     "cs,ax[0]=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi[37].T, ax=ax[0], ystep=0.01, gaussian=7.)\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
     "ax[0].set_ylabel('cos\\u03D1 [adm]')\n",
     "# ax[0].set_xlabel('\\u03C6 [DEG]')\n",
     "ax[0].set_aspect(aspect)\n",
@@ -1079,7 +1082,7 @@
     "\n",
     "cbar = fig.colorbar(cs, ax=ax.ravel().tolist(), location=\"top\", orientation=\"horizontal\", shrink=0.6)\n",
     "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "# cbar.ax.set_ylabel('normalised counts', rotation=\"horizontal\", rotation_mode=\"anchor\")\n",
     "\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/37-4MFPAD_S_phi_\"+CH+\"_LF_\"+en+\".png\", dpi=300, transparent=False, bbox_inches='tight')\n",
@@ -1255,6 +1258,7 @@
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
     "cs,ax[0]=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_rot[37].T, ax=ax[0], ystep=0.01, gaussian=7.)\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
     "ax[0].set_ylabel('cos\\u03D1 [adm]')\n",
     "# ax[0].set_xlabel('\\u03C6 [DEG]')\n",
     "ax[0].set_aspect(aspect)\n",
@@ -1266,7 +1270,7 @@
     "\n",
     "cbar = fig.colorbar(cs, ax=ax.ravel().tolist(), location=\"top\", orientation=\"horizontal\", shrink=0.6)\n",
     "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "# cbar.ax.set_ylabel('normalised counts', rotation=\"horizontal\", rotation_mode=\"anchor\")\n",
     "\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/37-4MFPAD_S_opt_\"+CH+\"_LF_\"+en+\".png\", dpi=300, transparent=False, bbox_inches='tight')\n",
@@ -1462,7 +1466,6 @@
     "\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "\n",
@@ -1506,7 +1509,6 @@
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
     "cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=ax)\n",
-    "#cbar.set_ticklabels([\"min\",\"max\"])\n",
     "#cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "ax.set_aspect(aspect)\n",
@@ -1626,7 +1628,6 @@
     "\n",
     "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
     "    cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "    # cbar.set_ticklabels([\"min\",\"max\"])\n",
     "    # cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
     "    cbar.ax.set_ylabel('% of asymmetry')\n",
     "\n",
@@ -1719,7 +1720,6 @@
     "\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "# cbar.set_ticklabels([\"min\",\"max\"]\n",
     "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "\n",
@@ -1825,7 +1825,6 @@
     "\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "\n",
@@ -1916,6 +1915,7 @@
     "# cs=ax.contourf(phiM,cosM,MFPAD_R_cos_sum.reshape(200,100).T,cmap=cmap_temp)\n",
     "# cs=ax.contourf(phiMM,cosMM,MFPAD_R_cos_sum.reshape.T, cmap=cmap_temp)\n",
     "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi_sum.T, ax=ax, cmap=cmap_temp)\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
@@ -1926,7 +1926,7 @@
     "#cbar for contourf\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
     "cbar.set_ticks([MFPAD_R_phi_sum.min(),MFPAD_R_phi_sum.max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -1944,6 +1944,7 @@
     "# cs=ax.contourf(phiM,cosM,MFPAD_R_cos_sum.reshape(200,100).T,cmap=cmap_temp)\n",
     "# cs=ax.contourf(phiMM,cosMM,MFPAD_R_cos_sum.reshape.T, cmap=cmap_temp)\n",
     "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi_sum.T, ax=ax)\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
@@ -1954,7 +1955,7 @@
     "#cbar for contourf\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
     "cbar.set_ticks([MFPAD_R_phi_sum.min(),MFPAD_R_phi_sum.max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -1971,6 +1972,7 @@
     "# cs=ax.contourf(phiM,cosM,MFPAD_S_cos_sum.reshape(200,100).T, cmap=cmap_temp)\n",
     "# cs=ax.contourf(phiMM,cosMM,MFPAD_R_cos_sum.reshape.T, cmap=cmap_temp)\n",
     "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_sum.T, ax=ax, cmap=cmap_temp)\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
@@ -1981,7 +1983,7 @@
     "# c bar for contourf\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
     "cbar.set_ticks([MFPAD_S_phi_sum.min(),MFPAD_S_phi_sum.max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -1999,6 +2001,7 @@
     "# cs=ax.contourf(phiM,cosM,MFPAD_S_cos_sum.reshape(200,100).T, cmap=cmap_temp)\n",
     "# cs=ax.contourf(phiMM,cosMM,MFPAD_R_cos_sum.reshape.T, cmap=cmap_temp)\n",
     "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_sum.T, ax=ax)\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
@@ -2009,7 +2012,7 @@
     "# c bar for contourf\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
     "cbar.set_ticks([MFPAD_S_phi_sum.min(),MFPAD_S_phi_sum.max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -2053,6 +2056,7 @@
     "# cs=ax.contourf(phiMM,cosMM,MFPAD_R_cos_sum.reshape.T, cmap=cmap_temp)\n",
     "limits=[0.07,0.25]\n",
     "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_R_phi_rot_sum.T, ax=ax, limits=limits)\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
@@ -2063,7 +2067,7 @@
     "#cbar for contourf\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
     "cbar.set_ticks([limits[0],limits[1]])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -2081,6 +2085,7 @@
     "# cs=ax.contourf(phiMM,cosMM,MFPAD_R_cos_sum.reshape.T, cmap=cmap_temp)\n",
     "limits=[0.07,0.25]\n",
     "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_rot_sum.T, ax=ax, limits=limits)\n",
+    "contrast=cs.get_array().max()/cs.get_array().min()\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
@@ -2091,7 +2096,7 @@
     "# c bar for contourf\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
     "cbar.set_ticks([limits[0],limits[1]])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticklabels([1,f\"{contrast:.2f}\"])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -2152,12 +2157,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from matplotlib.font_manager import findfont, FontProperties\n",
+    "font = findfont(FontProperties(family=['sans-serif']))\n",
+    "font"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "hash": "dc800e5d61c9e3c049001c7d7cf96b16f7c8a1a7caee44baf3fc436d9ec555c3"
   },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit ('base': conda)",
