change size of the canvas of R-S

--- a/diatomic_ALLCH.ipynb
+++ b/diatomic_ALLCH.ipynb
@@ -45,36 +45,36 @@
     "\n",
     "#550eV - 11.5eV\n",
     "#update nov Kilian binning (36,18)\n",
-    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_550eV_CR_ALLCH_diatomic.root\");en=\"550eV\";\n",
-    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_550eV_CL_ALLCH_diatomic.root\")\n",
-    "fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CR_ALLCH_diatomic.root\")\n",
-    "fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CL_ALLCH_diatomic.root\")\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_550eV_CR_ALLCH_diatomic.root\");en=\"550eV\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_550eV_CL_ALLCH_diatomic.root\")\n",
+    "# fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CR_ALLCH_diatomic.root\")\n",
+    "# fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CL_ALLCH_diatomic.root\")\n",
     "# CH=\"ALL_CH\";\n",
     "CH=\"CH14\";\n",
     "\n",
     "# # 546eV - 8.2eV\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_ALLCH_diatomic.root\");en=\"546eV\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_ALLCH_diatomic.root\")\n",
-    "# CH=\"ALL_CH\";\n",
-    "# # CH=\"CH14\";\n",
+    "# # CH=\"ALL_CH\";\n",
+    "# CH=\"CH14\";\n",
     "\n",
     "# # 544eV - 6.1eV\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CR_ALLCH_diatomic.root\");en=\"544eV\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CL_ALLCH_diatomic.root\")\n",
-    "# CH=\"ALL_CH\";\n",
-    "# # CH=\"CH14\";\n",
+    "# # CH=\"ALL_CH\";\n",
+    "# CH=\"CH14\";\n",
     "\n",
     "# # 542eV - 4eV\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CR_ALLCH_diatomic.root\");en=\"542eV\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CL_ALLCH_diatomic.root\")\n",
-    "# CH=\"ALL_CH\";\n",
-    "# # CH=\"CH14\";\n",
+    "# # CH=\"ALL_CH\";\n",
+    "# CH=\"CH14\";\n",
     "\n",
     "# # 541eV 3eV\n",
-    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_ALLCH_diatomic.root\");en=\"541eV\";\n",
-    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_ALLCH_diatomic.root\")\n",
+    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_ALLCH_diatomic.root\");en=\"541eV\";\n",
+    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_ALLCH_diatomic.root\")\n",
     "# CH=\"ALL_CH\";\n",
-    "# # CH=\"CH14\";\n",
+    "CH=\"CH14\";\n",
     "\n",
     "#True to use the MFPAD projection (16,) instead of ctheta (30,)\n",
     "projection=False\n",
@@ -351,7 +351,8 @@
     "\n",
     "print(\"CR fitting  and covarience \\n\", m2)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_single_hel_\"+CH+\"_\"+en+\"_exp.png\", figsize=(20, 10), dpi=144, transparent=False, bbox_inches='tight')"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_single_hel_\"+CH+\"_\"+en+\"_exp.png\", figsize=(20, 10), dpi=144, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_single_hel_\"+CH+\"_\"+en+\"_exp.svg\", figsize=(20, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -401,7 +402,8 @@
     "# ax.set_aspect(aspect)\n",
     "\n",
     "m\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_combi_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_combi_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_combi_\"+CH+\"_\"+en+\"_exp.svg\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -452,7 +454,8 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.svg\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -470,20 +473,21 @@
     "        return (-1.35*x/(1-0.8166/2*(3*x**2-1)/2))/100\n",
     "\n",
     "    x=np.linspace(-1,1,50)\n",
-    "    fig, (ax1,ax2) = plt.subplots(1,2, figsize=(10.5, 5.5), sharey=True, constrained_layout=True)\n",
+    "    fig, (ax1,ax2) = plt.subplots(1,2, figsize=(10, 5.5), sharey=True, constrained_layout=True)\n",
     "    fumi.plotminuit2(x_data,y_data,y_err/2,m,ax1,xlim=[-1,1], ylim=custom_ylim, nlabel=\"PECD fit\")\n",
     "    ax2.plot(x,rnd_curve(x),\"--\", label=\"theoretical model\")\n",
     "    ax2.errorbar(ctheta_Mox,np.flip((exp_MOx[\"value_R29A\"]/100).values),yerr=np.flip((exp_MOx[\"error\"]/100).values),fmt=\"o\")\n",
     "    ax2.axhline(0, color='black', alpha=0.2, lw=2)\n",
     "    \n",
-    "    ax1.set_title(\"R-TFMOx \")\n",
-    "    ax2.set_title(\"S-MOx \")\n",
+    "    ax1.set_title(\"R-TFMOx\")\n",
+    "    ax2.set_title(\"S-MOx\")\n",
     "    ax1.set_aspect(\"equal\",'datalim')\n",
     "    ax1.set_xlabel('cos\\u03D1 [adm]')\n",
     "    ax2.set_xlabel('cos\\u03D1 [adm]')\n",
     "    ax1.set_ylabel('PECD')\n",
     "    ax2.set_ylim([-0.04,0.06])\n",
-    "    ax2.set_xlim([None,None])\n",
+    "    ax1.set_xlim([-1.1,1.1])\n",
+    "    ax2.set_xlim([-1.1,1.1])\n",
     "    # ax1.grid();ax2.grid()\n",
     "    ax2.tick_params(labelsize=20)\n",
     "    ax1.tick_params(labelsize=20)\n",
@@ -497,7 +501,8 @@
     "    aspect=(custom_xlim[1]/custom_ylim[1])\n",
     "    ax1.set_aspect(aspect)\n",
     "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_VS_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n"
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_VS_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_VS_\"+CH+\"_\"+en+\"_exp.svg\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -544,7 +549,8 @@
     "\n",
     "    print(m)\n",
     "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_\"+CH+\"_\"+en+\"_exp.svg\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -573,9 +579,11 @@
     "    ax1.set_xlabel('cos\\u03D1 [adm]')\n",
     "    ax2.set_xlabel('cos\\u03D1 [adm]')\n",
     "    ax1.set_ylabel('PECD')\n",
-    "    ax2.set_xlim([None,None])\n",
-    "    # ax1.grid();ax2.grid()\n",
     "    ax2.set_ylim([-0.15,0.2])\n",
+    "    ax1.set_xlim([-1.05,1.05])\n",
+    "    # ax1.set_xlim([None,None])\n",
+    "    ax2.set_xlim([-1.1,1.1])\n",
+    "    # ax1.grid();ax2.grid()\n",
     "    ax2.tick_params(labelsize=20)\n",
     "    ax1.tick_params(labelsize=20)\n",
     "\n",
@@ -588,7 +596,8 @@
     "    aspect=(custom_xlim[1]/custom_ylim[1])\n",
     "    ax1.set_aspect(aspect)\n",
     "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_VS_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n"
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_VS_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_VS_\"+CH+\"_\"+en+\"_exp.svg\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n"
    ]
   },
   {
@@ -670,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   },
   "metadata": {
    "interpreter": {
