raw position images of AR at all 5 energies

--- a/Ar_calibration.ipynb
+++ b/Ar_calibration.ipynb
@@ -102,9 +102,176 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "xmm_pos,ymm_pos,counts_252=fugi.import_TH2Dgeneric(Ar,\"Ar_252eV_CR/electrons/hit_0/raw/position\")\n",
+    "xmm_pos,ymm_pos,counts_254=fugi.import_TH2Dgeneric(Ar,\"Ar_254eV_CR/electrons/hit_0/raw/position\")\n",
+    "xmm_pos,ymm_pos,counts_256=fugi.import_TH2Dgeneric(Ar,\"Ar_256eV_CR/electrons/hit_0/raw/position\")\n",
+    "xmm_pos,ymm_pos,counts_260=fugi.import_TH2Dgeneric(Ar,\"Ar_260eV_CR/electrons/hit_0/raw/position\")\n",
     "tof,xmm,fish_fillet_x=fugi.import_TH2Dgeneric(Ar,\"all_toghether/fish filet x\")\n",
     "tof,ymm,fish_fillet_y=fugi.import_TH2Dgeneric(Ar,\"all_toghether/fish filet y\")\n",
     "ctheta_en,en,cthetaEE=fugi.import_TH2Dgeneric(Ar,\"all_toghether/check_cthetaEE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "counts_tot=counts_252+counts_254+counts_256+counts_260\n",
+    "\n",
+    "#masking\n",
+    "counts_tot_masked = np.ma.masked_array(counts_tot, counts_tot < 5)\n",
+    "\n",
+    "# cs=ax.contourf(tof,ymm,fish_fillet_y_masked.T, levels=20)\n",
+    "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlim([-62., 62])\n",
+    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylim([-62., 62.])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks([fish_fillet_y_masked.min(),fish_fillet_y_masked.max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
+    "\n",
+    "fig.savefig(dir+\"position_allen.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "counts_tot=counts_252\n",
+    "\n",
+    "#masking\n",
+    "counts_tot_masked = np.ma.masked_array(counts_tot, counts_tot < 2)\n",
+    "\n",
+    "# cs=ax.contourf(tof,ymm,fish_fillet_y_masked.T, levels=20)\n",
+    "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlim([-62., 62])\n",
+    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylim([-62., 62.])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks([fish_fillet_y_masked.min(),fish_fillet_y_masked.max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
+    "\n",
+    "fig.savefig(dir+\"position_en252ev.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "counts_tot=counts_254\n",
+    "\n",
+    "#masking\n",
+    "counts_tot_masked = np.ma.masked_array(counts_tot, counts_tot < 2)\n",
+    "\n",
+    "# cs=ax.contourf(tof,ymm,fish_fillet_y_masked.T, levels=20)\n",
+    "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlim([-62., 62])\n",
+    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylim([-62., 62.])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks([fish_fillet_y_masked.min(),fish_fillet_y_masked.max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
+    "\n",
+    "fig.savefig(dir+\"position_en254ev.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "counts_tot=counts_256\n",
+    "\n",
+    "#masking\n",
+    "counts_tot_masked = np.ma.masked_array(counts_tot, counts_tot < 2)\n",
+    "\n",
+    "# cs=ax.contourf(tof,ymm,fish_fillet_y_masked.T, levels=20)\n",
+    "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlim([-62., 62])\n",
+    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylim([-62., 62.])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks([fish_fillet_y_masked.min(),fish_fillet_y_masked.max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
+    "\n",
+    "fig.savefig(dir+\"position_en256ev.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "\n",
+    "counts_tot=counts_260\n",
+    "\n",
+    "#masking\n",
+    "counts_tot_masked = np.ma.masked_array(counts_tot, counts_tot < 2)\n",
+    "\n",
+    "# cs=ax.contourf(tof,ymm,fish_fillet_y_masked.T, levels=20)\n",
+    "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
+    "\n",
+    "# ax.set_title(\"fish fillet y-axis\")\n",
+    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlim([-62., 62])\n",
+    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylim([-62., 62.])\n",
+    "\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks([fish_fillet_y_masked.min(),fish_fillet_y_masked.max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
+    "\n",
+    "fig.savefig(dir+\"position_en260ev.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "\n",
+    "# plt.close()"
    ]
   },
   {
@@ -272,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   },
   "metadata": {
    "interpreter": {
