bbox_inches='tight'

--- a/lens_strength.ipynb
+++ b/lens_strength.ipynb
@@ -168,8 +168,8 @@
     "\n",
     "ax.grid()\n",
     "\n",
-    "fig.savefig(dir+\"lens_effect_fish.svg\", dpi=300, transparent=False)\n",
-    "fig.savefig(dir+\"lens_effect_fish.png\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"lens_effect_fish.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"lens_effect_fish.png\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -195,8 +195,8 @@
     "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_ylabel('monetum magnitude [a.u.]')\n",
-    "# fig.savefig(dir+\"lens_effect_cos(theta).svg\", dpi=144, transparent=False)\n",
-    "# fig.savefig(dir+\"lens_effect_cos(theta).png\", dpi=144, transparent=False)"
+    "# fig.savefig(dir+\"lens_effect_cos(theta).svg\", dpi=144, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta).png\", dpi=144, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -226,8 +226,8 @@
     "\n",
     "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
     "\n",
-    "fig.savefig(dir+\"lens_effect_cos(theta)_mom.svg\", dpi=300, transparent=False)\n",
-    "fig.savefig(dir+\"lens_effect_cos(theta)_mom.png\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"lens_effect_cos(theta)_mom.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"lens_effect_cos(theta)_mom.png\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -258,8 +258,8 @@
     "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
     "\n",
     "ax.grid()\n",
-    "fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False)\n",
-    "fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False)"
+    "fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -292,8 +292,8 @@
     "\n",
     "ax.grid()\n",
     "\n",
-    "# fig.savefig(dir+\"lens_effect_fish.svg\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"lens_effect_fish.png\", dpi=300, transparent=False)"
+    "# fig.savefig(dir+\"lens_effect_fish.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"lens_effect_fish.png\", dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
   {
@@ -327,8 +327,8 @@
     "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
     "\n",
     "ax.grid()\n",
-    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "\n",
     "#! NOTE: it loses focus and distributions at theta = pi/2 are broaden"
    ]
@@ -362,8 +362,8 @@
     "ax.legend(custom_lines, ['4 eV', '8 eV', '12 eV', '16 eV'], loc=\"best\")\n",
     "\n",
     "ax.grid()\n",
-    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False)\n",
-    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "\n",
     "#! NOTE: seems no difference with the z=4"
    ]
@@ -377,9 +377,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "dc800e5d61c9e3c049001c7d7cf96b16f7c8a1a7caee44baf3fc436d9ec555c3"
+  },
   "kernelspec": {
    "display_name": "Python 3.8.8 64-bit ('base': conda)",
-   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -391,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   },
   "metadata": {
    "interpreter": {
