--- a/N2_calibration.ipynb
+++ b/N2_calibration.ipynb
@@ -163,9 +163,10 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "cbar.set_ticks([MFPAD3D.min()*1.03,MFPAD3D.max()*1.001])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.ax.set_ylabel('normalized counts')\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "# cbar.set_ticks([MFPAD3D.min()*1.03,MFPAD3D.max()*1.001])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
     "fig.savefig(dir+\"MFPAD3d_cmap.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
@@ -269,12 +270,12 @@
     "cs2=ax2.pcolormesh(p1_y,p2_y,np.ma.masked_array(p12_y.T,p12_y.T<3), shading='gouraud')\n",
     "cs3=ax3.pcolormesh(p1_z,p2_z,np.ma.masked_array(p12_z.T,p12_z.T<3), shading='gouraud')\n",
     "\n",
-    "ax1.set_xlabel(r\"$ion1_{x}$ [a.u.]\")\n",
-    "ax1.set_ylabel(r\"$ion2_{x}$ [a.u.]\")\n",
-    "ax2.set_xlabel(r\"$ion1_{y}$ [a.u.]\")\n",
-    "ax2.set_ylabel(r\"$ion2_{y}$ [a.u.]\")\n",
-    "ax3.set_xlabel(r\"$ion1_{z}$ [a.u.]\")\n",
-    "ax3.set_ylabel(r\"$ion2_{z}$ [a.u.]\")\n",
+    "ax1.set_xlabel(r\"$p_{ion1 x}$ [a.u.]\")\n",
+    "ax1.set_ylabel(r\"$p_{ion2 x}$ [a.u.]\")\n",
+    "ax2.set_xlabel(r\"$p_{ion1 y}$ [a.u.]\")\n",
+    "ax2.set_ylabel(r\"$p_{ion2 y}$ [a.u.]\")\n",
+    "ax3.set_xlabel(r\"$p_{ion1 z}$ [a.u.]\")\n",
+    "ax3.set_ylabel(r\"$p_{ion2 z}$ [a.u.]\")\n",
     "\n",
     "for a in atot:\n",
     "    a.set_aspect(aspect)\n",
@@ -429,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   },
   "metadata": {
    "interpreter": {
