--- a/Ar_calibration.ipynb
+++ b/Ar_calibration.ipynb
@@ -128,9 +128,9 @@
     "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
-    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlabel('x-axis [mm]')\n",
     "ax.set_xlim([-62., 62])\n",
-    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-62., 62.])\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
@@ -159,9 +159,9 @@
     "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
-    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlabel('x-axis [mm]')\n",
     "ax.set_xlim([-62., 62])\n",
-    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-62., 62.])\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
@@ -192,9 +192,9 @@
     "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
-    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlabel('x-axis [mm]')\n",
     "ax.set_xlim([-62., 62])\n",
-    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-62., 62.])\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
@@ -225,9 +225,9 @@
     "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
-    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlabel('x-axis [mm]')\n",
     "ax.set_xlim([-62., 62])\n",
-    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-62., 62.])\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
@@ -258,9 +258,9 @@
     "cs=ax.pcolormesh(ymm_pos,xmm_pos,counts_tot_masked.T, shading='gouraud')\n",
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
-    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_xlabel('x-axis [mm]')\n",
     "ax.set_xlim([-62., 62])\n",
-    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-62., 62.])\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
