uproot_methods removed adaptation to the new minimal contained environment python_graphs gasussian_filter import updated

--- a/72_2D_MFPADs_experiment_COPY.ipynb
+++ b/72_2D_MFPADs_experiment_COPY.ipynb
@@ -12,7 +12,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pkgutil\n",
-    "import uproot_methods\n",
     "\n",
     "from importlib import reload\n",
     "#syntax: fugi = reload(fugi)\n",
@@ -39,7 +38,7 @@
     "#to create the mesh\n",
     "import triangulation as tr\n",
     "from scipy.spatial import Delaunay\n",
-    "from scipy.ndimage.filters import gaussian_filter\n",
+    "from scipy.ndimage import gaussian_filter\n",
     "from pyntcloud import PyntCloud, structures\n",
     "\n",
     "import plotly\n",
@@ -56,7 +55,8 @@
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
     "#to see which classes have been defined so far\n",
-    "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
+    "# import uproot_methods\n",
+    "# [modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
     "# ##550eV - 11.5eV CH9\n",
     "# #update now Kilian binning (36,18)\n",
