--- a/diatomic_ALLCH.ipynb
+++ b/diatomic_ALLCH.ipynb
@@ -12,7 +12,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pkgutil\n",
-    "import uproot_methods\n",
     "\n",
     "import functions_giammi as fugi\n",
     "from importlib import reload\n",
@@ -31,7 +30,6 @@
     "\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
-    "import itertools\n",
     "\n",
     "from __future__ import division\n",
     "\n",
@@ -41,7 +39,8 @@
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
     "#to see which classes have been defined so far\n",
-    "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
+    "# import uproot_methods\n",
+    "# [modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
     "#550eV - 11.5eV\n",
     "#update nov Kilian binning (36,18)\n",
