--- a/double_ionization.ipynb
+++ b/double_ionization.ipynb
@@ -12,7 +12,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pkgutil\n",
-    "import uproot_methods\n",
     "\n",
     "import functions_giammi as fugi\n",
     "from importlib import reload\n",
@@ -32,7 +31,7 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "import itertools\n",
-    "from scipy.ndimage.filters import gaussian_filter\n",
+    "from scipy.ndimage import gaussian_filter\n",
     "\n",
     "from __future__ import division\n",
     "\n",
@@ -44,7 +43,8 @@
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
     "#to see which classes have been defined so far\n",
-    "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
+    "# import uproot_methods\n",
+    "# [modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R_MetOx_33eV_RCP_m30-28_new.root\")\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R_MetOx_33eV_LCP_m30-28_new.root\")\n",
@@ -950,9 +950,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e3e66c793b5272eb6ced2ef395fa3f1e661a5b1d7880dcfb1a8fb41860f8b331"
+  },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit ('base': conda)",
-   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -964,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   },
   "metadata": {
    "interpreter": {
