--- a/3D_MFPADs_experimnent_COPY.ipynb
+++ b/3D_MFPADs_experimnent_COPY.ipynb
@@ -12,7 +12,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pkgutil\n",
-    "import uproot_methods\n",
     "\n",
     "from importlib import reload\n",
     "#syntax: fugi = reload(fugi)\n",
@@ -52,7 +51,8 @@
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
     "#to see which classes have been defined so far\n",
-    "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
+    "# import uproot_methods\n",
+    "# [modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
     "#550eV - 11.5eV CH9\n",
     "# update nov Kilian binning (36,18)\n",
