--- a/distance_optimization_COPY.ipynb
+++ b/distance_optimization_COPY.ipynb
@@ -12,7 +12,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pkgutil\n",
-    "import uproot_methods\n",
     "\n",
     "from importlib import reload\n",
     "#syntax: fugi = reload(fugi)\n",
@@ -57,7 +56,8 @@
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
     "#to see which classes have been defined so far\n",
-    "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
+    "# import uproot_methods\n",
+    "# [modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
     "###550eV - 11.5eV CH11\n",
     "#update nov Kilian binning (36,18)\n",
@@ -827,9 +827,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e3e66c793b5272eb6ced2ef395fa3f1e661a5b1d7880dcfb1a8fb41860f8b331"
+  },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit ('base': conda)",
-   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -841,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   },
   "metadata": {
    "interpreter": {
